package reduction